@@ -1,8 +1,7 @@
-# $NetBSD: Makefile.common,v 1.3 2012/01/26 06:34:18 sbd Exp $
+# $NetBSD: Makefile.common,v 1.4 2013/01/27 00:13:29 wiz Exp $
 #
 # used by audio/akode/Makefile
 # used by audio/akode-plugins-alsa/Makefile
-# used by audio/akode-plugins-ffmpeg/Makefile
 # used by audio/akode-plugins-jack/Makefile
 # used by audio/akode-plugins-mpc/Makefile
 # used by audio/akode-plugins-mpeg/Makefile
